Add @CrossOrigin and update CorsConfigurationSource for production web services